infrastructure/firebase-service.yml
apiVersion: v1
kind: Service
metadata:
  name: firestore-service
spec:
  selector:
    app: firebase
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
