infrastructure/nextauth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextauth-service
spec:
  selector:
    app: nextauth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
